Commander Genius Release :
==========================

v0.3.3.1:
---------
- Tied up the code!

v0.3.3:
-------
- New audio system/manager
- Vorticon can also open and play IMF Files for music
- Fixes of a whole bunch of bugs
- Savegame system should work better
- On embedded systems the save state is written automatically putting date and level number
- more space for name in the save/load game section
- Small performance improvements, especially when loading Vorticon Keen games
- Better stereo Sound!
- Physics improvements
- Galaxy Keen now plays ingame music, finally!!!

v0.3.2.5:
---------
- Keen now can climb poles (Galaxy)
- Keen now can hang on cliff and climb then up (Galaxy)
- Some bug fixes.
- Many new features in Galaxy. Keen can do a lot of things now...
- improved some galaxy physics

v0.3.2.4:
---------
- Less load time
- Added nice Loading Screen
- Diagonal Keys are now supported
- Improved the hq sound quality
- minor bug fixes
- New threadpool which is used by the Loading Screen

v0.3.2.3:
---------
- Now Game shouldn't crash when playing music
- improved Vorticon physics

v0.3.2.2:
---------
- Music is now streamed
- Added tremor support
- Even better Sound support
- Several physic changes
- Keen now can walk in levels in Galaxy
- More mods are supported

v0.3.2.1:
---------
- more AI fixes
- Added support for mods which use the palette patch code
- 48 Khz is back again, after many months, but this time working correctly!
- better push and bump physics
- more of the Galaxy Engine. Keen now can walk on map.
- Added Cannon fire sound
- Added HUD Display, the one Chad had suggested
- Small memory issues fixed
- Improved memory management for foes.
- Keen 4 now works and can be played on map
- even faster and more Badass!

v0.3.2:
---------
- OpenGL improvements especially for iPhone!!
- Faster Game loads!
- Other segfault fixes!!
- Improved Mod support (Especially for Keen X and Yorphius II)
- Now HQ Sprites are supported!