@@ -8,7 +8,6 @@
 #ifndef CSOUNDSLOT_H_
 #define CSOUNDSLOT_H_
 
-#include "sdl/sound/hq_sound.h"
 #include "fileio/TypeDefinitions.h"
 #include <string>
 #include <vector>
@@ -22,22 +21,20 @@ public:
 	
 	void setupWaveForm( Uint8 *buf, Uint32 len );
 	void setupWaveForm( const std::vector<Uint8>& waveform );
-	bool loadSound(Uint8 *buffer, const Uint32 buf_size, const std::string& path, const std::string& searchname, unsigned int loadnum);
+	bool HQSndLoad(const std::string& gamepath, const std::string& soundname);
 	void unload();
 	
 	void setpAudioSpec(const SDL_AudioSpec *pAudioSpec){ m_pAudioSpec = const_cast<SDL_AudioSpec*>(pAudioSpec); }
 	
-	bool isHighQuality(){ return m_hqsound.enabled; }
 	byte *getSoundData(){ return m_sounddata; }
+	SDL_AudioSpec &getAudioSpec() const { return *m_pAudioSpec; }
 	unsigned int getSoundlength() { return m_soundlength; }
-	stHQSound	*getHQSoundPtr() { return &m_hqsound; }
 	
 	~CSoundSlot();
 
 private:
 	byte *m_sounddata;
 	unsigned int m_soundlength;
-	stHQSound m_hqsound;
 	SDL_AudioSpec *m_pAudioSpec;
 };
 
