@@ -4,6 +4,8 @@ Commander Genius Release :
 v0.3.3.1:
 ---------
 - Tied up the code!
+- New Audio System!
+- New Graphics System!
 
 v0.3.3:
 -------
